# retrolaunch

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md  frontend-dev.md  metadata-dev.md  rust-backend-dev.md  test-engineer.md  ui-animation-dev.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  FEATURE_IDEAS.md  INSTRUCTIONS.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  watcher.rs
src-tauri/src/commands/: config.rs  launcher.rs  metadata.rs  mod.rs  scanner.rs  watcher.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.sql  seed_systems.sql
src-tauri/src/launcher/: detect.rs  mod.rs  session.rs  spawn.rs
src-tauri/src/metadata/: cache.rs  igdb.rs  mod.rs  screenscraper.rs
src-tauri/src/scanner/: detector.rs  hasher.rs  mod.rs  nointro.rs  walker.rs
src-tauri/tests/: launcher_integration.rs  live_metadata_test.rs  metadata_integration.rs  scanner_integration.rs
src/components/: Badge.tsx  BlurhashPlaceholder.tsx  Button.tsx  CardSizeSlider.tsx  EmptyState.tsx  ErrorState.tsx  GameCard.tsx  GameListRow.tsx  GenreFilterBar.tsx  HeroBanner.tsx  HorizontalScrollRow.tsx  Input.tsx  ProgressBar.tsx  RandomGamePicker.tsx  SortDropdown.tsx  StatusFilterBar.tsx  StatusIndicator.tsx  SurpriseMeButton.tsx  SystemCard.tsx  SystemThemeHeader.tsx  Toast.tsx  ViewToggle.tsx  VirtualizedGameGrid.tsx  VirtualizedGameList.tsx
src/constants/: gameStatus.ts
src/hooks/: useDebounce.ts  useDynamicColor.ts  useGridKeyboardNav.ts  useListKeyboardNav.ts  useTauriEvent.ts  useUpdateChecker.ts
src/pages/: GameDetail.tsx  Home.tsx  Onboarding.tsx  Settings.tsx  SystemGrid.tsx
src/services/: api.ts  events.ts
src/store/: index.ts
src/styles/: globals.css
src/types/: index.ts
(+45 files in other folders)
