[package]
name = "retrolaunch"
version = "0.1.0"
description = "A visually stunning retro game launcher"
authors = [""]
edition = "2021"

[lib]
name = "retrolaunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
crc32fast = "1.5.0"
sha1 = "0.11.0"
rayon = "1.11.0"
notify = "8.2.0"
shell-words = "1.1.1"
thiserror = "2.0.18"
anyhow = "1.0.102"
