[package]
name = "retrolaunch"
version = "0.1.2"
description = "A visually stunning retro game launcher"
authors = [""]
edition = "2021"

[lib]
name = "retrolaunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "form", "query"] }
crc32fast = "1.5.0"
sha1 = "0.11.0"
rayon = "1.11.0"
notify = "8.2.0"
shell-words = "1.1.1"
thiserror = "2.0.18"
anyhow = "1.0.102"
walkdir = "2"
digest = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
quick-xml = "0.37"
blurhash = "0.2"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
